# hdrs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/actions/check/: action.yml
.github/workflows/: ci.yml
hdfs-sys/: Cargo.toml  build.rs
hdfs-sys/headers/: README.md
hdfs-sys/src/: lib.rs
hdrs/: Cargo.toml
hdrs/src/: client.rs  lib.rs
src/: async_file.rs  client.rs  file.rs  file_info.rs  lib.rs  metadata.rs  open_options.rs  readdir.rs  stream_builder.rs
tests/: main.rs
