[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Rust native client to hdfs"
documentation = "https://docs.rs/hdrs"
edition = "2021"
license = "Apache-2.0"
name = "hdrs"
repository = "https://github.com/Xuanwo/hdrs"
version = "0.1.5"

[package.metadata.docs.rs]
all-features = true

[features]
tokio-io = ["tokio"]

[dependencies]
futures-io = { version = "0.3.21", optional = true }
errno = "0.2.8"
# hdrs requires at least hadoop 2.3 to work.
# hadoop 2.2 doesn't handle FileNotFound correctly.
#
# hdrs requires at least hadoop 2.6 to work.
# Older version of hadoop doesn't handle errno correctly.
hdfs-sys = { version = "0.2.0", features = ["hdfs_2_6"] }
libc = "0.2.124"
log = "0.4.16"
tokio = { version = "1.18.0", optional = true }

[dev-dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.21"
rand = "0.8.5"
tokio = { version = "1.18.0", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
