[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Rust native client to hdfs"
documentation = "https://docs.rs/hdrs"
edition = "2021"
license = "Apache-2.0"
name = "hdrs"
repository = "https://github.com/Xuanwo/hdrs"
version = "0.3.0"

[package.metadata.docs.rs]
all-features = true

[features]
async_file = ["dep:futures", "dep:blocking"]

[dependencies]
blocking = { version = "1.3.0", optional = true }
errno = "0.3"
futures = { version = "0.3", optional = true }
hdfs-sys = "0.3"
libc = "0.2"
log = "0.4"

[dev-dependencies]
anyhow = "1"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
