[package]
name = "hdrs"
version = "0.0.0"
edition = "2021"
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Rust native client to hdfs"
documentation = "https://docs.rs/hdrs"
repository = "https://github.com/Xuanwo/hdrs"
license = "Apache-2.0"

[dependencies]
hdfs-sys = "0.0.1"
libc = "0.2.124"
anyhow = "1.0.57"
log = "0.4.16"

[dev-dependencies]
env_logger = "0.9.0"
